# echolia-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_REFERENCE.md  CLAUDE.md  Caddyfile  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  README.md  SYNC_IMPLEMENTATION.md  docker-compose.yml  docs.md  fly.toml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  main.py  master_db.py
app/add_ons/: __init__.py  dependencies.py  models.py  routes.py  service.py
app/auth/: __init__.py  crypto.py  dependencies.py  models.py  oauth_verifiers.py  routes.py  service.py
app/inference/: __init__.py  crypto.py  llm_models.py  models.py  routes.py  service.py  tasks.py
app/inference/providers/: __init__.py  anthropic.py  google.py  openai.py
app/llm/: models.py  routes.py  service.py
app/llm/providers/: anthropic.py  google.py  openai.py
app/payments/: models.py  routes.py  service.py
app/payments/verifiers/: __init__.py  apple_verifier.py  google_verifier.py
app/payments/webhooks/: __init__.py
app/sync/: models.py  routes.py  service.py
bruno/echolia-api/: bruno.json  collection.bru
bruno/echolia-api/environments/: local.bru  production.bru
bruno/echolia-api/requests/auth/: delete-device.bru  list-devices.bru  me.bru  oauth-signin.bru  refresh-token.bru
bruno/echolia-api/requests/inference/: execute.bru  folder.bru  public-key.bru  usage.bru
bruno/echolia-api/requests/llm/: folder.bru  (+3 more)
docs/: CLIENT_IMPLEMENTATION_GUIDE.md  E2EE_INFERENCE.md  SYNC_PROTOCOL.md
scripts/: migrate.sh  setup.sh
tests/: test_add_ons.py  test_auth.py  test_payments.py
(+2 files in other folders)
